--- a/config.env
+++ b/config.env
@@ -1,3 +1,8 @@
+# SQL Server SA şifresi
 SQL_PASSWORD="Homeserverdatabase1903"
+
+# rclone remote adı
 REMOTE_NAME="GoogleDrive"
+
+# Google Drive'da yedeklerin depolanacağı klasör adı
 REMOTE_DIR="Homeserver_Backups"
