--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # SQL Server SA şifresi
-SQL_PASSWORD="Homeserverdatabase1903"
+SQL_PASSWORD=""
 
 # rclone remote adı
-REMOTE_NAME="GoogleDrive"
+REMOTE_NAME=""
 
 # Google Drive'da yedeklerin depolanacağı klasör adı
-REMOTE_DIR="Homeserver_Backups"
+REMOTE_DIR=""
